--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                   <div class="social">
                     <a href="https://www.twitter.com/VincentAdjetey"><i class="fab fa-twitter"></i></a>
                     <!-- <a href=""><i class="fa fa-facebook"></i></a> -->
-                    <a href="https://linked/in/vincent-adjei-607290195/"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/vincent-adjei-607290195/"><i class="fab fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
