--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  
 
   <!-- Libraries CSS Files -->
-  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -131,7 +132,7 @@
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fas fa-stopwatch"></i></div>
-              <h4 class="title">Delivery</h4>
+              <h4 class="title">On Time</h4>
               <p class="description">We are passionate for delivering best customer satisfaction at all levels without any form of discrimination.</p>
             </div>
 
@@ -194,52 +195,54 @@
 
         <header class="section-header">
           <h3>Our Services</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          <p>We start with understanding our customers: identifying their point of view and serving up the most relevant, engaging visual imagery. </p>
         </header>
 
         <div class="row">
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <div class="icon"><i class="ion-ios-lightbulb-outline" style="color: #ff689b;"></i></div>
+              <h4 class="title">Logo Designs</h4>
+              <p class="description">Logos are the first visual impression for your brand. We’ve perfected the process of building unforgettable logos and branding.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title">Business Cards & Letterheads</h4>
+              <p class="description">Don’t underestimate the importance of these two pieces when building your corporate identity.The little card says big things.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <div class="icon"><i class="ion-ios-world-outline" style="color: #3fcdc7;"></i></div>
+              <h4 class="title">Web Development</h4>
+              <p class="description">From ecommerce to single page websites, our team develops and designs beautiful elements that enhance the look of your sites and are created in engaging ways for your audience.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <div class="icon"><i class="ion-ios-paper-outline" style="color:#41cf2e;"></i></div>
+              <h4 class="title">Brochures and Invitation Cards</h4>
+              <p class="description">Admit it or not, people do judge books by their cover and products by their package. We can help you make a great first impression and be memorable.
+
+              </p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-world-outline" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
+              <div class="icon"><i class="ion-ios-paperplane-outline" style="color: #d6ff22;"></i></div>
+              <h4 class="title">Posters And Flyers</h4>
               <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+              <div class="icon"><i class="ion-ios-camera-outline" style="color: #4680ff;"></i></div>
+              <h4 class="title">Digital Photography</h4>
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
             </div>
           </div>
@@ -287,7 +290,7 @@
 
           <div class="col-lg-4 mb-4">
             <div class="card wow bounceInUp">
-                <i class="fa fa-object-group"></i>
+                <i class="far fa-sun"></i>
               <div class="card-body">
                 <h5 class="card-title">Tenacity</h5>
                 <p class="card-text">Tenacity, our team ensures that we move along with our clients in a gradual and decent manner.
@@ -872,9 +875,9 @@
     </div>
   </footer><!-- #footer -->
 
-  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+  <a href="#intro" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
-  <!-- <div id="preloader"></div> -->
+  <div id="preloader"></div>
 
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
