--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fas fa-stopwatch"></i></div>
               <h4 class="title">On Time</h4>
-              <p class="description">We are passionate for delivering best customer satisfaction at all levels without any form of discrimination.</p>
+              <p class="description">We have passion for delivering the best services to our customer's satisfaction at all levels to meet project deadlines.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
               <div class="icon"><i class="fas fa-palette"></i></div>
               <h4 class="title">Fun Creators</h4>
-              <p class="description">A team of makers and fun creators who always love to see or here the success stories of our clients in all form of dimentions.</p>
+              <p class="description">A team of makers and fun creators who always love to see or hear the success stories of our clients in all form of dimentions.</p>
             </div>
 
           </div>
@@ -219,14 +219,14 @@
             <div class="box">
               <div class="icon"><i class="ion-ios-world-outline" style="color: #3fcdc7;"></i></div>
               <h4 class="title">Web Development</h4>
-              <p class="description">From ecommerce to single page websites, our team develops and designs beautiful elements that enhance the look of your sites and are created in engaging ways for your audience.</p>
+              <p class="description">From single page to ecommerce websites, our team develops and designs beautiful elements that enhance the look of your sites and are created in engaging ways for your audience.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-paper-outline" style="color:#41cf2e;"></i></div>
               <h4 class="title">Brochures and Invitation Cards</h4>
-              <p class="description">Admit it or not, people do judge books by their cover and products by their package. We can help you make a great first impression and be memorable.
+              <p class="description">Admit it or not, people do judge books by their cover and products by their package. We can help you make a great first impression and a memorable one also.
 
               </p>
             </div>
@@ -236,14 +236,14 @@
             <div class="box">
               <div class="icon"><i class="ion-ios-paperplane-outline" style="color: #d6ff22;"></i></div>
               <h4 class="title">Posters And Flyers</h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p class="description">We create flyers and posters that promote your goods, services and events. Drawing the attention of your target audience is what we do</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-camera-outline" style="color: #4680ff;"></i></div>
               <h4 class="title">Digital Photography</h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <p class="description">Have you ever wished you could stay in one moment forever? That is what we offer with high quality pictures which last a lifetime.</p>
             </div>
           </div>
 
@@ -280,7 +280,7 @@
               <i class="fas fa-cloud"></i>
               <div class="card-body">
                 <h5 class="card-title">Dream Come True</h5>
-                <p class="card-text">We dream it and that makes our customers happy and feel better.<br>
+                <p class="card-text">Our customers dream it, we make their dreams a reality. This is what makes our customers happy and feel better.<br>
                 <br>
                 <br></p>
                 <a href="#about" class="readmore scrollto">Read more </a>
